--- a/Models/Pitching/all_pitchers_gbc_pitch_db.ipynb
+++ b/Models/Pitching/all_pitchers_gbc_pitch_db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "source": [
     "# Import pandas\r\n",
     "import pandas as pd\r\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "source": [
     "# Define engine path\r\n",
     "engine_path = f'postgresql://{USER_NAME}:{PASSWORD}@team-country-music.czuzjwoakfyk.us-east-2.rds.amazonaws.com:5432/team_country_music'\r\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "source": [
     "# Query Pitching Data\r\n",
     "results = []\r\n",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "source": [
     "# Combine 'ball' and 'in play' values into 'not strike' bin\r\n",
     "not_strike = ['B', 'X']\r\n",
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "source": [
     "# Drop rows with NAs\r\n",
     "pitchers_df.dropna(inplace = True)"
@@ -166,11 +166,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "source": [
     "# Define features set\r\n",
     "X = pitchers_df.copy()\r\n",
-    "X.drop(columns = ['type'], axis = 1, inplace = True)\r\n",
+    "X.drop(columns = ['type', 'ID', 'p_throws_L'], axis = 1, inplace = True)\r\n",
     "X.head()"
    ],
    "outputs": [
@@ -178,35 +178,35 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "      ID  release_speed  zone  balls  strikes  inning  release_spin_rate  \\\n",
-       "0  18993           80.1   7.0      1        2       3             2243.0   \n",
-       "1  18994           82.1   4.0      1        0       4             1555.0   \n",
-       "2  18995           85.6   7.0      1        1       3             1839.0   \n",
-       "3  18996           75.5  11.0      0        0       4             1783.0   \n",
-       "4  18997           87.4  13.0      0        1       3             1908.0   \n",
+       "   release_speed  zone  balls  strikes  inning  release_spin_rate  \\\n",
+       "0           80.1   7.0      1        2       3             2243.0   \n",
+       "1           82.1   4.0      1        0       4             1555.0   \n",
+       "2           85.6   7.0      1        1       3             1839.0   \n",
+       "3           75.5  11.0      0        0       4             1783.0   \n",
+       "4           87.4  13.0      0        1       3             1908.0   \n",
        "\n",
-       "   release_extension  pitch_number  pitch_type_CH  ...  pitch_type_FS  \\\n",
-       "0                7.0             4            1.0  ...            0.0   \n",
-       "1                6.4             2            0.0  ...            1.0   \n",
-       "2                7.0             3            0.0  ...            1.0   \n",
-       "3                6.3             1            0.0  ...            0.0   \n",
-       "4                6.9             2            0.0  ...            0.0   \n",
+       "   release_extension  pitch_number  pitch_type_CH  pitch_type_CS  ...  \\\n",
+       "0                7.0             4            1.0            0.0  ...   \n",
+       "1                6.4             2            0.0            0.0  ...   \n",
+       "2                7.0             3            0.0            0.0  ...   \n",
+       "3                6.3             1            0.0            0.0  ...   \n",
+       "4                6.9             2            0.0            0.0  ...   \n",
        "\n",
-       "   pitch_type_FT  pitch_type_KC  pitch_type_KN  pitch_type_SI  pitch_type_SL  \\\n",
+       "   pitch_type_FO  pitch_type_FS  pitch_type_FT  pitch_type_KC  pitch_type_KN  \\\n",
        "0            0.0            0.0            0.0            0.0            0.0   \n",
-       "1            0.0            0.0            0.0            0.0            0.0   \n",
-       "2            0.0            0.0            0.0            0.0            0.0   \n",
+       "1            0.0            1.0            0.0            0.0            0.0   \n",
+       "2            0.0            1.0            0.0            0.0            0.0   \n",
        "3            0.0            0.0            0.0            0.0            0.0   \n",
        "4            0.0            0.0            0.0            0.0            0.0   \n",
        "\n",
-       "   pitch_type_nan  stand_r  p_throws_L  p_throws_R  \n",
-       "0             0.0      0.0         0.0         1.0  \n",
-       "1             0.0      0.0         0.0         1.0  \n",
-       "2             0.0      0.0         0.0         1.0  \n",
-       "3             0.0      0.0         0.0         1.0  \n",
-       "4             0.0      0.0         0.0         1.0  \n",
+       "   pitch_type_SI  pitch_type_SL  pitch_type_nan  stand_r  p_throws_R  \n",
+       "0            0.0            0.0             0.0      0.0         1.0  \n",
+       "1            0.0            0.0             0.0      0.0         1.0  \n",
+       "2            0.0            0.0             0.0      0.0         1.0  \n",
+       "3            0.0            0.0             0.0      0.0         1.0  \n",
+       "4            0.0            0.0             0.0      0.0         1.0  \n",
        "\n",
-       "[5 rows x 27 columns]"
+       "[5 rows x 25 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -227,7 +227,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>ID</th>\n",
        "      <th>release_speed</th>\n",
        "      <th>zone</th>\n",
        "      <th>balls</th>\n",
@@ -237,7 +236,9 @@
        "      <th>release_extension</th>\n",
        "      <th>pitch_number</th>\n",
        "      <th>pitch_type_CH</th>\n",
+       "      <th>pitch_type_CS</th>\n",
        "      <th>...</th>\n",
+       "      <th>pitch_type_FO</th>\n",
        "      <th>pitch_type_FS</th>\n",
        "      <th>pitch_type_FT</th>\n",
        "      <th>pitch_type_KC</th>\n",
@@ -246,14 +247,12 @@
        "      <th>pitch_type_SL</th>\n",
        "      <th>pitch_type_nan</th>\n",
        "      <th>stand_r</th>\n",
-       "      <th>p_throws_L</th>\n",
        "      <th>p_throws_R</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>18993</td>\n",
        "      <td>80.1</td>\n",
        "      <td>7.0</td>\n",
        "      <td>1</td>\n",
@@ -263,6 +262,7 @@
        "      <td>7.0</td>\n",
        "      <td>4</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -277,7 +277,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>18994</td>\n",
        "      <td>82.1</td>\n",
        "      <td>4.0</td>\n",
        "      <td>1</td>\n",
@@ -287,9 +286,10 @@
        "      <td>6.4</td>\n",
        "      <td>2</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -301,7 +301,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>18995</td>\n",
        "      <td>85.6</td>\n",
        "      <td>7.0</td>\n",
        "      <td>1</td>\n",
@@ -311,9 +310,10 @@
        "      <td>7.0</td>\n",
        "      <td>3</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -325,7 +325,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>18996</td>\n",
        "      <td>75.5</td>\n",
        "      <td>11.0</td>\n",
        "      <td>0</td>\n",
@@ -334,6 +333,7 @@
        "      <td>1783.0</td>\n",
        "      <td>6.3</td>\n",
        "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
@@ -349,7 +349,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>18997</td>\n",
        "      <td>87.4</td>\n",
        "      <td>13.0</td>\n",
        "      <td>0</td>\n",
@@ -358,6 +357,7 @@
        "      <td>1908.0</td>\n",
        "      <td>6.9</td>\n",
        "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
@@ -373,19 +373,19 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 27 columns</p>\n",
+       "<p>5 rows × 25 columns</p>\n",
        "</div>"
       ]
      },
      "metadata": {},
-     "execution_count": 34
+     "execution_count": 19
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "source": [
     "# Define target vector\r\n",
     "y = pitchers_df['type'].values\r\n",
@@ -400,14 +400,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 35
+     "execution_count": 20
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "source": [
     "# Split the data into training and testing sets - stratify by pitcher\r\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state = yogi)"
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "source": [
     "# Create a classifier object\r\n",
     "learning_rates = [0.05, 0.1, 0.25, 0.5, 0.75, 1]\r\n",
@@ -468,7 +468,7 @@
      "name": "stdout",
      "text": [
       "Learning Rate: 0.05\n",
-      "Accuracy Score (training): 0.711\n",
+      "Accuracy Score (training): 0.710\n",
       "Accuracy Score (validation): 0.717\n",
       "\n",
       "Learning Rate: 0.1\n",
@@ -481,15 +481,15 @@
       "\n",
       "Learning Rate: 0.5\n",
       "Accuracy Score (training): 0.716\n",
-      "Accuracy Score (validation): 0.714\n",
+      "Accuracy Score (validation): 0.716\n",
       "\n",
       "Learning Rate: 0.75\n",
-      "Accuracy Score (training): 0.719\n",
+      "Accuracy Score (training): 0.718\n",
       "Accuracy Score (validation): 0.712\n",
       "\n",
       "Learning Rate: 1\n",
-      "Accuracy Score (training): 0.715\n",
-      "Accuracy Score (validation): 0.698\n",
+      "Accuracy Score (training): 0.720\n",
+      "Accuracy Score (validation): 0.708\n",
       "\n"
      ]
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "source": [
     "# Choose a learning rate and create classifiers\r\n",
     "classifier = GradientBoostingClassifier(\r\n",
@@ -680,7 +680,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 38
+     "execution_count": 23
     }
    ],
    "metadata": {}
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "source": [
     "# Calculate accuracy score\r\n",
     "acc_score = accuracy_score(y_test, predictions)\r\n",
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "source": [
     "# Generate classification report\r\n",
     "print('Classification Report')\r\n",
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "source": [
     "# Save model file\r\n",
     "filename = '../Saved/all_pitchers_gbc_pitch.sav'\r\n",
